--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.1",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
